--- a/core-v1/popup.css
+++ b/core-v1/popup.css
@@ -3,6 +3,10 @@
 /**
 font-family: 'Inconsolata', monospace;
  */
+
+/****************
+* General
+****************/
 * { margin:0; padding:0; border:none; outline:none; }
 body {
     font-family: 'Inconsolata', monospace; font-size: 14px;
@@ -12,38 +16,30 @@ body {
 a { color:#4285f4; text-decoration: none;}
 a:hover { text-decoration: underline; }
 .hidden {display: none;}
-
-/****************
-* Header
-****************/
-
-/****************
-* Main
-****************/
 main {padding:10px 10px 0;}
-input, textarea {
-    display: block; width: 100%; margin-bottom:10px;
-    padding: 5px; box-sizing: border-box;
-    border:1px solid #b6b6b6;
-}
-p {margin-bottom:10px;}
 
-/* SITE SUPPORT */
-.site-support {
-    margin:-10px -10px 10px; padding:10px;
-    background-color:#43A047; color:#fff;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-}
-.site-support .favicon {margin-right:10px; max-width:16px;}
+/****************
+* Types
+****************/
+#types > button {}
+#types > button.active {border:1px solid red;}
 
-/* SUCCESS */
-.success.result {
-    font-size:20px; color:#fff;
-    background-color: #4285f4; padding:8px 5px;
+/****************
+* Quantity
+****************/
+
+/****************
+* Output
+****************/
+#output-wrapper {
+
 }
-body.site-supported .success.result {background-color:#43A047;}
+#output {
+    height: 200px;
+    width: 100%;
+    resize: none;
+    border:1px solid #ccc;
+}
 
 /****************
 * Footer
