--- a/core-v1/assets/css/ion.rangeSlider.skinModern.css
+++ b/core-v1/assets/css/ion.rangeSlider.skinModern.css
@@ -12,7 +12,7 @@
 .irs-bar,
 .irs-bar-edge,
 .irs-slider {
-    background: url(sprite-skin-modern.png) repeat-x;
+    background: url(../img/sprite-skin-modern.png) repeat-x;
 }
 
 .irs {
