--- a/lipsum-generator/css/style.css
+++ b/lipsum-generator/css/style.css
@@ -101,3 +101,24 @@ body {background:#193155b8; font-family: 'Roboto', sans-serif; font-weight:500;}
     font-size:12px; line-height:1; padding:0;
 }
 .lipsum-range-slider .irs--flat .irs-single:before {display:none;}
+
+/* checkbox */
+.lipsum-generator__checkbox:not(:last-child) {margin-bottom:5px;}
+.lipsum-generator__checkbox {
+    position:relative; min-height:20px; padding-right:50px;
+    display:flex; align-items:center;
+}
+.lipsum-generator__checkbox label {color:#9daab6;}
+.lipsum-generator__checkbox span {
+    display:block; position:absolute; top:0; right:0; cursor:pointer;
+    width:40px; height:20px; background:rgba(255, 255, 255, 0.1); border-radius:10px;
+    transition:all .3s ease;
+}
+.lipsum-generator__checkbox span input {opacity:0; visibility:hidden;}
+.lipsum-generator__checkbox span:before {
+    content:''; position:absolute; top:2px; left:2px;
+    width:16px; height:16px; background:#fff; border-radius:50%;
+    transition:all .3s ease;
+}
+.lipsum-generator__checkbox span.active {background:#3884ff;}
+.lipsum-generator__checkbox span.active:before {left:22px;}
