--- a/assets/css/extension-ui.css
+++ b/assets/css/extension-ui.css
@@ -74,3 +74,33 @@ a:hover, a:focus {color:var(--color-primary);}
     background:var(--color-primary);
     border-radius:4px;
 }
+
+
+/*********************************
+ * Range slider
+ *********************************/
+.range-slider input[type=range] {
+    -webkit-appearance:none;
+    width:100%; height:4px;
+    border-radius:5px;
+    background:rgba(255, 255, 255, 0.5);
+    outline:none;
+    -webkit-transition:.2s;
+    transition:background .2s;
+}
+
+.range-slider input[type=range]:hover {background:#fff;}
+
+.range-slider input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance:none;
+    appearance:none;
+    width:18px; height:18px;
+    border-radius:50%; background:var(--color-primary); border:1px solid rgba(255, 255, 255, 0.5);
+    cursor:pointer;
+}
+
+.range-slider input[type=range]::-moz-range-thumb {
+    width:18px; height:18px;
+    border-radius:50%; background:var(--color-primary);
+    cursor:pointer;
+}
