--- a/assets/css/extension-ui.css
+++ b/assets/css/extension-ui.css
@@ -79,6 +79,16 @@ a:hover, a:focus {color:var(--color-primary);}
 /*********************************
  * Range slider
  *********************************/
+.range-slider-inner {position:relative; padding:15px 0 0;}
+
+/* label */
+.range-slider-label {position:absolute; top:0; font-size:12px; background:var(--app-background);}
+.range-slider-label.edge {color:rgba(255, 255, 255, 0.5); z-index:1;}
+.range-slider-label.min {left:0;}
+.range-slider-label.max {right:0;}
+.range-slider-label.val {transform:translateX(-50%); min-width:20px; padding:0 2px; text-align:center; z-index:2;}
+
+/* input */
 .range-slider input[type=range] {
     -webkit-appearance:none;
     width:100%; height:4px;
